--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <script>
     // 计时器
     function timer() {
-      var start = new Date(2018, 9, 24);
+      var start = new Date("2018/9/24");
       var t = new Date() - start;
       var h = ~~(t / 1000 / 60 / 60 % 24);
       if (h < 10) {
