--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
+      background: blue;
     }
 
     body {
@@ -29,7 +30,7 @@
     }
 
     .content {
-      margin:-400px 200px 0px 0px;
+      margin:-200px 200px 0px 0px;
       position: absolute;
     }
 
